--- a/Views/Patient/Bill.cshtml
+++ b/Views/Patient/Bill.cshtml
@@ -67,14 +67,7 @@
     </div>
     
     <div class="actions">
-      @if (isDoctorMode)
-      {
-        <a asp-controller="Doctor" asp-action="DoctorDashboard" class="btn btn-primary"><i class="bi bi-speedometer2"></i> Doctor Dashboard</a>
-      }
-      else
-      {
-        <a asp-controller="Patient" asp-action="Dashboard" class="btn btn-primary"><i class="bi bi-speedometer2"></i> Patient Dashboard</a>
-      }
+      <a asp-controller="Doctor" asp-action="DoctorDashboard" class="btn btn-primary"><i class="bi bi-speedometer2"></i> Back to Doctor Dashboard</a>
     </div>
   </div>
 </div>
