--- a/Views/Admin/Accept.cshtml
+++ b/Views/Admin/Accept.cshtml
@@ -31,7 +31,7 @@
                     </div>
                 </form>
                 <div class="mt-4">
-                    <a asp-action="Index" class="btn btn-secondary">Back to Scan List</a>
+                    <a asp-action="BookedScans" class="btn btn-secondary">Back to Scan List</a>
                 </div>
             </div>
         </div>
