--- a/Views/Admin/BookedScans.cshtml
+++ b/Views/Admin/BookedScans.cshtml
@@ -8,7 +8,7 @@
     <h1 class="text-center mb-4 fw-bold">Scan List</h1>
     <div class="card shadow">
         <div class="card-body">
-            <a href="#" class="btn btn-primary mb-3">Book a New Appointment</a>
+            <a asp-controller="Account" asp-action="PatientLogin" class="btn btn-primary mb-3">Book a New Appointment</a>
             <table class="table table-striped table-bordered">
                 <thead class="bg-dark text-white">
                     <tr>
@@ -18,7 +18,6 @@
                         <th scope="col">Lab Name</th>
                         <th scope="col">Scan Type</th>
                         <th scope="col">File</th>
-                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
