--- a/Views/Patient/Mri.cshtml
+++ b/Views/Patient/Mri.cshtml
@@ -22,7 +22,7 @@
         <div class="col-md-6 col-lg-6">
             <div class="card">
                 <div class="card-header bg-primary">
-                    <h5 class="card-title text-center text-white">XRay Appointment Booking</h5>
+                    <h5 class="card-title text-center text-white">MRI Appointment Booking</h5>
                 </div>
                 <div class="card-body">
                     <form asp-action="AddMri" method="post">
