--- a/Views/Patient/Mri.cshtml
+++ b/Views/Patient/Mri.cshtml
@@ -12,8 +12,7 @@
             </div>
             <div class="nav-quick">
                 <a class="btn btn-sm btn-light px-3" asp-controller="Patient" asp-action="AppointmentHistory"><i class="bi bi-calendar-event me-1"></i>Appointments</a>
-                <a class="btn btn-sm btn-light px-3" href="#"><i class="bi bi-capsule-pill me-1"></i>Prescriptions</a>
-                <a class="btn btn-sm btn-light px-3" href="#"><i class="bi bi-person-badge me-1"></i>Profile</a>
+                <a class="btn btn-sm btn-light px-3" asp-controller="Patient" asp-action="Profile"><i class="bi bi-person-badge me-1"></i>Profile</a>
             </div>
         </div>
     </div>
