--- a/Views/Patient/Profile.cshtml
+++ b/Views/Patient/Profile.cshtml
@@ -40,7 +40,7 @@
 
                         <div class="mb-3">
                             <label asp-for="ContactNumber" class="form-label">Contact Number</label>
-                            <input asp-for="ContactNumber" class="form-control" />
+                            <input asp-for="ContactNumber" class="form-control" maxlength="10" />
                             <span asp-validation-for="ContactNumber" class="text-danger"></span>
                         </div>
 
