--- a/Views/Patient/BookScan.cshtml
+++ b/Views/Patient/BookScan.cshtml
@@ -58,7 +58,11 @@
                     </div>
                 </div>
             </div>
-
+            <div class="text-center mt-5">
+                <a asp-action="Dashboard" asp-controller="Patient" class="btn btn-secondary">
+                    <i class="bi bi-arrow-left-circle"></i> Back to Dashboard
+                </a>
+            </div>
         </div>
     </div>
 </div>
