--- a/Views/Doctor/Index.cshtml
+++ b/Views/Doctor/Index.cshtml
@@ -59,6 +59,9 @@
             }
         </div>
     </div>
+    <div class="mt-4 text-center">
+        <a asp-action="Index" asp-controller="Admin" class="btn btn-secondary"><i class="bi bi-arrow-left-circle"></i> Back</a>
+    </div>
 </div>
 
 @section Scripts {
