--- a/Views/Doctor/Payments.cshtml
+++ b/Views/Doctor/Payments.cshtml
@@ -89,6 +89,9 @@
       </table>
     </div>
   </div>
+    <div class="mt-4 text-center">
+        <a asp-action="DoctorDashboard" asp-controller="Doctor" class="btn btn-secondary"><i class="bi bi-arrow-left-circle"></i> Back</a>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script>
