--- a/Views/Doctor/Payments.cshtml
+++ b/Views/Doctor/Payments.cshtml
@@ -41,7 +41,7 @@
               <tr>
                 <td>#@b.BillId</td>
                 <td>@b.PatientName</td>
-                <td>@b.BillDate.ToString("dd MMM yyyy HH:mm")</td>
+                <td>@b.BillDate.ToString("dd MMM yyyy")</td>
                 <td><strong>@b.TotalAmount.ToString("0.00")</strong></td>
                 <td>
                   @if(isCashPayment)
